--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-   "homepage": "http://gaukhartok.github.io/todo0app-redux",
+   "homepage": "http://gaukhartok.github.io/todo0app-redux-",
   
    "name": "vite-todolist",
   
